; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/nfsd/extr_nfsproc.c_nfsd_return_attrs.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/nfsd/extr_nfsproc.c_nfsd_return_attrs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfsd_attrstat = type { i32, %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i32, %struct.TYPE_5__* }
%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64, %struct.nfsd_attrstat*)* @nfsd_return_attrs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @nfsd_return_attrs(i64 %0, %struct.nfsd_attrstat* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.nfsd_attrstat*, align 8
  store i64 %0, i64* %4, align 8
  store %struct.nfsd_attrstat* %1, %struct.nfsd_attrstat** %5, align 8
  %6 = load i64, i64* %4, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %2
  %9 = load i64, i64* %4, align 8
  store i64 %9, i64* %3, align 8
  br label %26

10:                                               ; preds = %2
  %11 = load %struct.nfsd_attrstat*, %struct.nfsd_attrstat** %5, align 8
  %12 = getelementptr inbounds %struct.nfsd_attrstat, %struct.nfsd_attrstat* %11, i32 0, i32 1
  %13 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %12, i32 0, i32 1
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.nfsd_attrstat*, %struct.nfsd_attrstat** %5, align 8
  %19 = getelementptr inbounds %struct.nfsd_attrstat, %struct.nfsd_attrstat* %18, i32 0, i32 1
  %20 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  %22 = load %struct.nfsd_attrstat*, %struct.nfsd_attrstat** %5, align 8
  %23 = getelementptr inbounds %struct.nfsd_attrstat, %struct.nfsd_attrstat* %22, i32 0, i32 0
  %24 = call i32 @vfs_getattr(i32 %17, i32 %21, i32* %23)
  %25 = call i64 @nfserrno(i32 %24)
  store i64 %25, i64* %3, align 8
  br label %26

26:                                               ; preds = %10, %8
  %27 = load i64, i64* %3, align 8
  ret i64 %27
}

declare dso_local i64 @nfserrno(i32) #1

declare dso_local i32 @vfs_getattr(i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
